--- a/package.json
+++ b/package.json
@@ -42,5 +42,12 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sitek94/angular-playground.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sitek94/angular-playground/issues"
   }
 }
