--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles/global.scss"],
             "scripts": []
           },
           "configurations": {
@@ -83,7 +83,7 @@
             "karmaConfig": "karma.conf.js",
             "codeCoverage": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles/global.scss"],
             "scripts": []
           }
         },
